@@ -82,7 +82,7 @@
     commands:</para>
 
 <screen><userinput>touch tools/edis/EnhancedDisassembly.exports              &amp;&amp;
-./configure --prefix=/opt/llvm &amp;&amp;
+./configure --prefix=/opt/llvm                            &amp;&amp;
 find -name Makefile -exec                                 \
          sed -ir -e '/^LIBRARYNAME/a SHARED_LIBRARY = 1'  \
                  -e 's#BUILD_ARCHIVE :*= 1#NO_&amp;#'         \
