@@ -6,10 +6,10 @@
 
   <!ENTITY alsa-lib-download-http "&alsa-download-http;/lib/alsa-lib-&alsa-lib-version;.tar.bz2">
   <!ENTITY alsa-lib-download-ftp  "&alsa-download-ftp;/lib/alsa-lib-&alsa-lib-version;.tar.bz2">
-  <!ENTITY alsa-lib-md5sum        "d8a556041a4cbeeae0c32eadeffb3c74">
-  <!ENTITY alsa-lib-size          "790 KB">
-  <!ENTITY alsa-lib-buildsize     "35 MB (additional 17 MB to build and install docs)">
-  <!ENTITY alsa-lib-time          "0.7 SBU (less than 0.1 SBU to build and install docs)">
+  <!ENTITY alsa-lib-md5sum        "7cc05f25e1d5b65da8fb3fdcd540f226">
+  <!ENTITY alsa-lib-size          "820 KB">
+  <!ENTITY alsa-lib-buildsize     "32 MB (additional 17 MB to build and install docs)">
+  <!ENTITY alsa-lib-time          "0.3 SBU (less than 0.1 SBU to build and install docs)">
 ]>
 
 <sect1 id="alsa-lib" xreflabel="ALSA Library-&alsa-lib-version;">
@@ -33,7 +33,7 @@
     the ALSA library.  This is used by programs (including <application>ALSA
     Utilities</application>) requiring access to the ALSA sound interface.</para>
 
-    &lfs65_checked;
+    &lfs70_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
@@ -106,7 +106,8 @@ install -v -m644 -D doc/asoundrc.txt \
 
 <screen><userinput>make doc</userinput></screen>
 
-    <para>Now, as the <systemitem class="username">root</systemitem> user:</para>
+    <para>Now, to install the API documentation, as the <systemitem
+    class="username">root</systemitem> user:</para>
 
 <screen role="root"><userinput>install -v -d -m755 /usr/share/doc/alsa-&alsa-lib-version;/html &amp;&amp;
 install -v -m644 doc/doxygen/html/* /usr/share/doc/alsa-&alsa-lib-version;/html</userinput></screen>
