@@ -6,10 +6,10 @@
 
   <!ENTITY audiofile-download-http "http://www.68k.org/~michael/audiofile/audiofile-&audiofile-version;.tar.gz">
   <!ENTITY audiofile-download-ftp  " ">
-  <!ENTITY audiofile-md5sum        "a39be317a7b1971b408805dc5e371862">
-  <!ENTITY audiofile-size          "491 KB">
-  <!ENTITY audiofile-buildsize     "11 MB">
-  <!ENTITY audiofile-time          "0.3 SBU">
+  <!ENTITY audiofile-md5sum        "cb2c4fe6e899e688ffe5d1568581cb63">
+  <!ENTITY audiofile-size          "712 KB">
+  <!ENTITY audiofile-buildsize     "101 MB">
+  <!ENTITY audiofile-time          "0.6 SBU">
 ]>
 
 <sect1 id="audiofile" xreflabel="Audio File-&audiofile-version;">
@@ -33,7 +33,7 @@
     audio file libraries and two sound file support programs. These are useful
     to support basic sound file formats.</para>
 
-    &lfs65_checked;
+    &lfs70_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
@@ -57,6 +57,13 @@
       </listitem>
     </itemizedlist>
 
+    <bridgehead renderas="sect3">Audio File Dependencies</bridgehead>
+
+    <bridgehead renderas="sect4">Required</bridgehead>
+    <para role="required">
+      <xref linkend="alsa-lib"/>
+    </para>
+    
     <para condition="html" role="usernotes">User Notes:
     <ulink url="&blfs-wiki;/audiofile"/></para>
 
