@@ -268,19 +268,19 @@ chown -v -R apache:apache /srv/www</userinput></screen>
 
     </sect3>
 
-    <sect3  id="apache-init">
+    <sect3  id="httpd-init">
       <title>Boot Script</title>
 
       <para>If you want the <application>Apache</application> server to
       start automatically when the system is booted, install the
-      <filename>/etc/rc.d/init.d/apache</filename> init script included
+      <filename>/etc/rc.d/init.d/httpd</filename> init script included
       in the <xref linkend="bootscripts"/> package.</para>
 
-      <indexterm zone="apache apache-init">
+      <indexterm zone="apache httpd-init">
         <primary sortas="f-apache">apache</primary>
       </indexterm>
 
-<screen role="root"><userinput>make install-apache</userinput></screen>
+<screen role="root"><userinput>make install-httpd</userinput></screen>
 
     </sect3>
 
